// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-app"
/>
`;

exports[`App single 1`] = `
<div
  class="ant-app"
>
  <div>
    Hello World
  </div>
</div>
`;
